--- a/src/chatting-test.html
+++ b/src/chatting-test.html
@@ -22,7 +22,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
-      var socket = io('http://localhost:4000');
+      var socket = io(process.env.TEST_URL);
       var messages = document.getElementById('messages');
       var form = document.getElementById('form');
       var input = document.getElementById('input');
